ArgoRollout/05-Dashboard/02-rollout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-canary
spec:
  selector:
    app: rollout-canary
  ports:
    - targetPort: 8080
      port: 80
      protocol: tcp
