ArgoRollout/05-Dashboard/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-server
  # namespace: argo-rollouts
spec:
  type: NodePort
  selector:
    aapp.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
    app.kubernetes.io/component: argo-rollouts-dashboard
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
      nodePort: 31123
